# codebase-to-blog

./: .gitignore  README.md  chunk_parsed_codebase.py  codebase_parser.py  generate_blog.py  main.py  pyproject.toml  retrievals.py
client/: package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/app/generate/: page.tsx
client/app/query/: page.tsx
client/components/: icons.tsx  main-nav.tsx  site-header.tsx
core/services/: query_preprocessing.py
server/: README.md  pyproject.toml
server/code_to_blog_server/: main.py
server/code_to_blog_server/api/endpoints/: __init__.py  blog.py
server/code_to_blog_server/services/: __init__.py  chunk_codebase.py  create_embeddings.py  generate_blog.py  retrievals.py  traverse_codebase.py
server/talk_to_code_server/: main.py
server/talk_to_code_server/api/: api.py
server/talk_to_code_server/services/: __init__.py  chunk_codebase.py  query_ai.py  retrievals.py  traverse_codebase.py
tooling/: faiss_index.idx  faiss_index.idx_chunks.npy  main.py
tooling/services/: chunk_codebase.py  codebase_traversal.py  retrieval_system.py
