[tool.poetry]
name = "code_to_blog_server"
version = "0.1.0"
description = "The server for code to blog, a project which seeks to generate blog articles from code repos"
authors = ["Jonathan van Wersch <jonathanvwersch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
numpy = "2.1.1"
sentence-transformers = "3.0.1"
anthropic = "0.34.2"
fastapi = "0.114.0"
pydantic = "2.9.0"
python-dotenv = "1.0.1"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "code_to_blog_server.main:main"